--- a/Views/Home/ReportViewer.cshtml
+++ b/Views/Home/ReportViewer.cshtml
@@ -1,6 +1,10 @@
 @using DevExpress.AspNetCore
 
-@model DocumentViewerSample.Models.ReportViewerModel
+@model ReportServerIntegration.Models.ReportViewerModel
+
+@{
+    ViewData["Title"] = "Report";
+}
 
 @section Styles {
     <link href="~/lib/vendors.min.css" rel="stylesheet" />
