--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using DocumentViewerSample
-@using DocumentViewerSample.Models
+﻿@using ReportServerIntegration
+@using ReportServerIntegration.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
